add demo options, finish supply drop

--- a/public/index.html
+++ b/public/index.html
@@ -140,19 +140,7 @@
                             }
                         </style>
 
-                        <DIV STYLE="font-size: 13px; margin-bottom: 5px;" CLASS="ad-warning ad-warning-one">Advertisement</DIV>
-                        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859288291436441"
-                        ></script>
-                        <!-- Main menu ad -->
-                        <ins class="adsbygoogle ad-type-responsive"
-                            style="display:block"
-                            data-ad-client="ca-pub-2859288291436441"
-                            data-ad-slot="7138740914"
-                            data-ad-format="horizontal"
-                            data-full-width-responsive="true"></ins>
-                        <script>
-                                (adsbygoogle = window.adsbygoogle || []).push({});
-                        </script>
+                        <%- adslot_1 %>
 
                         <!-- leaderboard -->
                         <DIV CLASS="lb-divider"></DIV>
@@ -179,19 +167,7 @@
 
                         <DIV CLASS="lb-footnote">Want to join the global leaderboard? <A HREF="./login?action=register" TARGET="_blank">Make an account</A> if you haven't already and start battling to earn medals!</DIV>
 
-                        <DIV STYLE="font-size: 13px; margin-bottom: 5px;" CLASS="ad-warning">Advertisement</DIV>
-                        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859288291436441"
-                        ></script>
-                        <!-- Main menu ad -->
-                        <ins class="adsbygoogle"
-                            style="display:block"
-                            data-ad-client="ca-pub-2859288291436441"
-                            data-ad-slot="7138740914"
-                            data-ad-format="horizontal"
-                            data-full-width-responsive="true"></ins>
-                        <script>
-                                (adsbygoogle = window.adsbygoogle || []).push({});
-                        </script>
+                        <%- adslot_2 %>
 
                         <DIV CLASS="lb-divider"></DIV>
 
@@ -245,22 +221,7 @@
                 <BUTTON ONCLICK="exitLobby()" CLASS="joinbutton jb_gray" STYLE="margin-top: 10px; padding-left: 5px; padding-right: 5px">Back to Main Menu</BUTTON>
             </DIV>
 
-            <DIV STYLE="font-size: 13px; margin-bottom: 5px; margin: auto; margin-top: 15px; text-align: center;" CLASS="ad-warning">Advertisement</DIV>
-            <DIV STYLE="text-align: center; width: 100%; min-height: 100px; min-width: 100vw; display: block;">
-                <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859288291436441"
-                ></script>
-                <!-- lobby ad 1 -->
-                <ins class="adsbygoogle"
-                        style="display:block"
-                        data-ad-client="ca-pub-2859288291436441"
-                        data-ad-slot="6903292412"
-                        data-full-width-responsive="true"></ins>
-                <script>
-                    window.addEventListener("load", function() {
-                        (adsbygoogle = window.adsbygoogle || []).push({});
-                    });
-                </script>
-            </DIV>
+            <%- adslot_3 %>
         </DIV>
         <DIV CLASS="gamescreen" ID="gamescreen">
             <DIV ID="player_gui">
