--- a/public/tutorial/powerups.html
+++ b/public/tutorial/powerups.html
@@ -77,7 +77,7 @@
 
                                 <div class="badge-container">
                                     <div class="card" style="width: 280px; border: var(--medium); overflow: hidden; -webkit-box-shadow: 0px 0px 12px 2px #0a0a0a; box-shadow: 0px 0px 12px 2px #0a0a0a;">
-                                        <img class="card-img-top img-fluid" style="border: none" src="../images/tutorial/airlift_image.PNG" alt="Card image">
+                                        <img class="card-img-top img-fluid" style="border: none" src="../images/tutorial/airlift_image.PNG" alt="Airlift image">
                                         <div class="card-body" style="background: #474747; -webkit-box-shadow: 0px 0px 12px 2px #0a0a0a; box-shadow: 0px 0px 12px 2px #0a0a0a;">
                                             <h4 class="card-title">Airlift</h4>
                                             <p class="card-text">
@@ -89,13 +89,25 @@
                                     </div>
 
                                     <div class="card" style="width: 280px; border: var(--medium); overflow: hidden; -webkit-box-shadow: 0px 0px 12px 2px #0a0a0a; box-shadow: 0px 0px 12px 2px #0a0a0a;">
-                                        <img class="card-img-top img-fluid" style="border: none" src="../images/tutorial/nuke_image.PNG" alt="Card image">
+                                        <img class="card-img-top img-fluid" style="border: none" src="../images/tutorial/nuke_image.PNG" alt="Nuke image">
                                         <div class="card-body" style="background: #474747; -webkit-box-shadow: 0px 0px 12px 2px #0a0a0a; box-shadow: 0px 0px 12px 2px #0a0a0a;">
                                             <h4 class="card-title">Nuke</h4>
                                             <p class="card-text">
                                                 <U>Type:</U> Damage<br>
                                                 <U>Cooldown:</U> 40 sec.<br>
                                                 The nuke does catastrophic splash damage! 70% of all troops at ground zero (the territory targeted) will be wiped out, and damage decreases the further you go. If a territory has 0 troops left, it becomes neutral. Note that this powerup does FRIENDLY FIRE!
+                                            </p>
+                                        </div>
+                                    </div>
+
+                                    <div class="card" style="width: 280px; border: var(--medium); overflow: hidden; -webkit-box-shadow: 0px 0px 12px 2px #0a0a0a; box-shadow: 0px 0px 12px 2px #0a0a0a;">
+                                        <img class="card-img-top img-fluid" style="border: none" src="../images/tutorial/supplies_image.PNG" alt="Supplies image">
+                                        <div class="card-body" style="background: #474747; -webkit-box-shadow: 0px 0px 12px 2px #0a0a0a; box-shadow: 0px 0px 12px 2px #0a0a0a;">
+                                            <h4 class="card-title">Supply Drop</h4>
+                                            <p class="card-text">
+                                                <U>Type:</U> Support<br>
+                                                <U>Cooldown:</U> 20 sec.<br>
+                                                The supply drop gives a 40% defensive buff for 30 seconds to a friendly territory. The supply helicopter leaves from the territory with the most troops, and you can't use this powerup if you only have 1 territory. Note that if the territory changes hands before the supply helicopter arrives, the boost will go to the new occupant.
                                             </p>
                                         </div>
                                     </div>
