finalized badge update

--- a/public/user.html
+++ b/public/user.html
@@ -53,7 +53,7 @@
                 <DIV CLASS="u-pc-line">Win rate: <SPAN ID="up-rate">--</SPAN>%<BR></DIV>
             </DIV>
             <DIV CLASS="u-badge-area">
-                <DIV CLASS="u-badge-title">Badges (<SPAN ID="u-badge-count">--</SPAN>)</DIV>
+                <DIV CLASS="u-badge-title">Badges (<SPAN ID="u-badge-count">--</SPAN> / <SPAN ID="u-total-count">--</SPAN>)</DIV>
                 <DIV CLASS="u-container" ID="badge-container">
                     
                 </DIV>
